check.log
    Checking flux-mqtt v0.1.0 (/Volumes/fushilu/workspace/flux-iot/crates/flux-mqtt)
error[E0412]: cannot find type `Arc` in this scope
  --> crates/flux-mqtt/src/handler.rs:12:16
   |
12 |     event_bus: Arc<EventBus>,
   |                ^^^ not found in this scope
   |
help: consider importing one of these structs
   |
 1 + use crate::Arc;
   |
 1 + use std::sync::Arc;
   |

error[E0412]: cannot find type `Arc` in this scope
  --> crates/flux-mqtt/src/handler.rs:16:49
   |
16 |     pub fn new(manager: MqttManager, event_bus: Arc<EventBus>) -> Self {
   |                                                 ^^^ not found in this scope
   |
help: consider importing one of these structs
   |
 1 + use crate::Arc;
   |
 1 + use std::sync::Arc;
   |

warning: unused import: `flux_types::message::Message`
 --> crates/flux-mqtt/src/manager.rs:4:5
  |
4 | use flux_types::message::Message;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `error`
 --> crates/flux-mqtt/src/manager.rs:6:27
  |
6 | use tracing::{info, warn, error};
  |                           ^^^^^

warning: unused import: `std::rc::Rc`
 --> crates/flux-mqtt/src/handler.rs:1:5
  |
1 | use std::rc::Rc;
  |     ^^^^^^^^^^^

warning: unused imports: `fn_factory_with_config` and `fn_service`
 --> crates/flux-mqtt/src/handler.rs:2:21
  |
2 | use ntex::service::{fn_factory_with_config, fn_service};
  |                     ^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^

warning: unused import: `ntex::util::Ready`
 --> crates/flux-mqtt/src/handler.rs:3:5
  |
3 | use ntex::util::Ready;
  |     ^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0412`.
warning: `flux-mqtt` (lib) generated 5 warnings
error: could not compile `flux-mqtt` (lib) due to 2 previous errors; 5 warnings emitted
